--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,7 @@
    
     "name": "scraptf copy2clipboard extension",
     "version": "0.1.0",
+    "icons": {"128": "icon.png" },
    
     "content_scripts": [{
       "js": ["content.js"],
