Name changed to tf2TradingExtensions, and a major update to the structure, it will hold a set of extensions

--- a/scrap.tf/scrapItemList/manifest.json
+++ b/scrap.tf/scrapItemList/manifest.json
@@ -1,9 +1,8 @@
 {
     "manifest_version": 3,
    
-    "name": "scraptf copy2clipboard extension",
+    "name": "scrap.tf items name list",
     "version": "0.1.0",
-    "icons": {"128": "icon.png" },
    
     "content_scripts": [{
       "js": ["content.js"],
