Changed the main README.md, changed the manifest.json and added a filter ro remove non wanted words in copy to clipboard for stntrading.eu

--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,7 @@
       "matches": ["https://stntrading.eu/item*"]
     },
     {
-      "js": ["./backpack.tf/addKSButton/content.js"],
+      "js": ["./backpack.tf/oldUI/addKSButton/content.js"],
       "permissions": ["activeTab"],
       "matches": ["https://backpack.tf/stats/*"]
     }
