--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,9 @@
   "manifest_version": 3,
 
   "name": "tf2TradingUtils",
-  "version": "0.1.0",
+  "version": "1.0",
+
+  "description": "Some scripts for tf2 trading",
 
   "content_scripts": [
     {
@@ -11,7 +13,6 @@
     },
     {
       "js": ["./stntrading.eu/unusualBackpack/content.js"],
-      "permissions": ["scripting"],
       "matches": ["https://stntrading.eu/item/tf2/Unusual*"]
     },
     {
@@ -20,13 +21,15 @@
     },
     {
       "js": ["./backpack.tf/oldUI/addKSButton/content.js"],
-      "permissions": ["activeTab"],
       "matches": ["https://backpack.tf/stats/*"]
     },
     {
       "js": ["./steamcommunity.com/steamLinks/content.js"],
-      "permissions": ["activeTab"],
       "matches": ["https://steamcommunity.com/profiles/*", "https://steamcommunity.com/id/*"]
+    },
+    {
+      "js": ["./steamcommunity.com/steamTradeHelper/content.js"],
+      "matches": ["https://steamcommunity.com/tradeoffer/new/*"]
     }
   ]
 }
